refactor(backend): dedupe test payload builder, widen scheduler pool, narrow AI-failure catch